# openvpn

./: .gitignore  README.md  openvpn-install.sh
minivpn/app/src/main/bak/: CMakeLists.txt  export.cmake  lz4.cmake  lzo.cmake  openssl.cmake  openvpn.cmake  pie_openvpn.cmake  test.cmake
minivpn/app/src/main/bak/lzo/include/lzo/: lzoutil.h
minivpn/app/src/main/bak/lzo/src/: config1z.h  lzo_supp.h
minivpn/app/src/main/bak/openssl/: e_os.h
minivpn/app/src/main/bak/openssl/crypto/: armcap.c  context.c  core_algorithm.c  core_fetch.c  core_namemap.c  cpt_err.c  cpuid.c  cryptlib.c  ctype.c  der_writer.c  dllmain.c  ebcdic.c  ex_data.c  getenv.c  info.c  init.c  initthread.c  mem.c  mem_sec.c  o_fopen.c  o_init.c  o_str.c  o_time.c  packet.c  param_build.c  param_build_set.c  params.c  params_dup.c  params_from_text.c  passphrase.c  provider.c  provider_child.c  provider_conf.c  provider_core.c  punycode.c  self_test_core.c  sparse_array.c  threads_lib.c  threads_none.c  threads_pthread.c  (+3 more)
minivpn/app/src/main/bak/openssl/crypto/aes/: aes_cbc.c  aes_cfb.c  aes_core.c  aes_ecb.c  aes_ige.c  aes_misc.c  aes_ofb.c  aes_wrap.c
minivpn/app/src/main/bak/openssl/crypto/aria/: aria.c
minivpn/app/src/main/bak/openssl/crypto/asn1/: a_bitstr.c  a_d2i_fp.c  a_digest.c  a_dup.c  a_gentm.c  a_i2d_fp.c  a_int.c  a_mbstr.c  a_object.c  a_print.c  a_sign.c  a_strex.c  a_strnid.c  a_time.c  a_type.c  a_utctm.c  a_utf8.c  a_verify.c  ameth_lib.c  asn1_err.c  asn1_gen.c  asn1_item_list.c  asn1_lib.c  asn1_parse.c  asn_mime.c  asn_moid.c  asn_mstbl.c  asn_pack.c  bio_asn1.c  bio_ndef.c  d2i_param.c  d2i_pr.c  d2i_pu.c  evp_asn1.c  f_int.c  f_string.c  i2d_evp.c  n_pkey.c  p5_pbe.c  p5_pbev2.c  (+18 more)
minivpn/app/src/main/bak/openssl/crypto/async/: async.c  async_err.c  async_local.h  async_wait.c
minivpn/app/src/main/bak/openssl/crypto/bf/: bf_cfb64.c  bf_ecb.c  bf_enc.c  bf_local.h  bf_ofb64.c  bf_skey.c
minivpn/app/src/main/bak/openssl/crypto/bio/: bf_buff.c  bf_lbuf.c  bf_nbio.c  bf_null.c  bf_readbuff.c  bio_addr.c  bio_cb.c  bio_err.c  bio_lib.c  bio_local.h  bio_meth.c  bio_print.c  bio_sock2.c  bss_bio.c  bss_conn.c  bss_core.c  bss_file.c  bss_log.c  bss_mem.c  bss_null.c  bss_sock.c  ossl_core_bio.c
minivpn/app/src/main/bak/openssl/crypto/bn/: bn_add.c  bn_asm.c  bn_blind.c  bn_const.c  bn_conv.c  bn_ctx.c  bn_depr.c  bn_dh.c  bn_div.c  bn_err.c  bn_exp.c  bn_exp2.c  bn_gcd.c  bn_gf2m.c  bn_intern.c  bn_kron.c  bn_lib.c  bn_local.h  bn_mod.c  bn_mont.c  bn_mpi.c  bn_mul.c  bn_nist.c  bn_ppc.c  bn_prime.c  bn_print.c  bn_rand.c  bn_recp.c  bn_rsa_fips186_4.c  bn_shift.c  bn_sparc.c  bn_sqr.c  bn_sqrt.c  bn_srp.c  bn_word.c  bn_x931p.c  rsaz_exp.c  rsaz_exp_x2.c
minivpn/app/src/main/bak/openssl/crypto/buffer/: buf_err.c  buffer.c
minivpn/app/src/main/bak/openssl/crypto/chacha/: chacha_enc.c  chacha_ppc.c
minivpn/app/src/main/bak/openssl/crypto/cmac/: cmac.c
minivpn/app/src/main/bak/openssl/crypto/cmp/: cmp_err.c  cmp_hdr.c  cmp_http.c  cmp_local.h  cmp_msg.c  cmp_protect.c  cmp_server.c  cmp_status.c  cmp_util.c  cmp_vfy.c
minivpn/app/src/main/bak/openssl/crypto/cms/: cms_asn1.c  cms_att.c  cms_cd.c  cms_dd.c  cms_dh.c  cms_ec.c  cms_enc.c  cms_env.c  cms_err.c  cms_ess.c  cms_io.c  cms_kari.c  cms_lib.c  cms_local.h  cms_pwri.c  cms_rsa.c  cms_sd.c  cms_smime.c
minivpn/app/src/main/bak/openssl/crypto/comp/: c_zlib.c  comp_err.c  comp_lib.c
minivpn/app/src/main/bak/openssl/crypto/conf/: conf_api.c  conf_def.c  conf_err.c  conf_lib.c  conf_mall.c  conf_mod.c  conf_sap.c  conf_ssl.c
minivpn/app/src/main/bak/openssl/crypto/crmf/: crmf_asn.c  crmf_err.c  crmf_lib.c  crmf_local.h  crmf_pbm.c
minivpn/app/src/main/bak/openssl/crypto/ct/: ct_b64.c  ct_err.c  ct_log.c  ct_oct.c  ct_policy.c  ct_prn.c  ct_sct.c  ct_sct_ctx.c  ct_vfy.c
minivpn/app/src/main/bak/openssl/crypto/des/: cbc_cksm.c  cbc_enc.c  cfb64ede.c  cfb64enc.c  cfb_enc.c  des_enc.c  des_local.h  ecb3_enc.c  ecb_enc.c  fcrypt.c  fcrypt_b.c  ofb64ede.c  ofb64enc.c  ofb_enc.c  pcbc_enc.c  qud_cksm.c  rand_key.c  set_key.c  str2key.c  xcbc_enc.c
minivpn/app/src/main/bak/openssl/crypto/dh/: dh_ameth.c  dh_asn1.c  dh_backend.c  dh_check.c  dh_depr.c  dh_err.c  dh_gen.c  dh_group_params.c  dh_kdf.c  dh_key.c  dh_lib.c  dh_meth.c  dh_pmeth.c  dh_rfc5114.c
minivpn/app/src/main/bak/openssl/crypto/dsa/: dsa_ameth.c  dsa_asn1.c  dsa_backend.c  dsa_check.c  dsa_depr.c  dsa_err.c  dsa_gen.c  dsa_key.c  dsa_lib.c  dsa_local.h  dsa_meth.c  dsa_ossl.c  dsa_pmeth.c  dsa_prn.c  dsa_sign.c  dsa_vrf.c
minivpn/app/src/main/bak/openssl/crypto/dso/: dso_dlfcn.c  dso_err.c  dso_lib.c  dso_local.h
minivpn/app/src/main/bak/openssl/crypto/ec/: curve25519.c  ec2_oct.c  ec2_smpl.c  ec_ameth.c  ec_asn1.c  ec_backend.c  ec_check.c  ec_curve.c  ec_cvt.c  ec_deprecated.c  ec_err.c  (+23 more)
minivpn/app/src/main/bak/openssl/providers/: baseprov.c  defltprov.c  legacyprov.c  nullprov.c  prov_running.c
minivpn/app/src/main/bak/openssl/ssl/: bio_ssl.c  d1_lib.c  d1_srtp.c  ktls.c  methods.c  pqueue.c  s3_cbc.c  s3_enc.c  s3_lib.c  ssl_asn1.c  ssl_cert.c  ssl_ciph.c  ssl_conf.c  ssl_err.c  ssl_init.c  ssl_lib.c  ssl_local.h  ssl_mcnf.c  ssl_rsa.c  ssl_sess.c  ssl_txt.c  sslerr.h  t1_enc.c  t1_lib.c  tls13_enc.c  tls_depr.c  tls_srp.c
minivpn/app/src/main/bak/openvpn/src/: config-msvc.h  native.c  openvpn-plugin.h
minivpn/app/src/main/bak/test/: lz4test.c  lzotest.c  test.h
minivpn/app/src/main/cpp/: .gitignore  CMakeLists.txt  android.cmake  install.sh  libnl.cmake  linux.cmake  lzo.cmake  minivpn.cmake  openssl.cmake  openssl_linux.cmake  openvpn.cmake  output.cmake  start_run.sh
minivpn/app/src/main/cpp/lzo/src/: config2a.h  lzo_conf.h
minivpn/app/src/main/cpp/openssl/crypto/: buildinf.h
minivpn/app/src/main/cpp/openvpn/: config.h  native.c
openvpn/app/src/main/cpp/: CMakeLists.txt  lz4.cmake  lzo.cmake  openvpn.cmake
openvpn/app/src/main/cpp/lzo/src/: config1c.h
openvpn/app/src/main/cpp/openvpn3/client/: ovpncli.cpp  ovpncli.hpp
openvpn/app/src/main/cpp/openvpn3/javacli/: Client.java
openvpn/app/src/main/cpp/ovpnutil/: jniglue.c
(+978 files in other folders)
